fixed distorted views, sorted employee listing by name, host for mailer changed

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -11,12 +11,11 @@ body {
 
 .rss-box {
   position: absolute;
-  top: 167px;
-  width: 550px;
+  top: 30%;
+  width: 40%;
   background-color: #FFFFFF;
-  margin-top: 0px;
-  /*border: 7px solid #FF9900;*/
   box-shadow: 2px 2px 23px 0px;
+  border-radius: 3%;
 
 }
 .rss-item-auth{
