--- a/app/assets/stylesheets/intranet.css.scss
+++ b/app/assets/stylesheets/intranet.css.scss
@@ -1,5 +1,5 @@
 #header {
-  background: url("header_bkg.png") no-repeat center;
+  background: image_url("header_bkg.png") no-repeat center;
   width:100%;
   /*float:left;*/
   height:107px;
