--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -36,31 +36,42 @@
   margin-top: 5%;
 }
 .document{position: relative;margin-left: 400px;top:-96px;}
-.profile{max-width: 380px;max-height: 350px;padding: 30px 30px; background-color: white; box-shadow: 2px 2px 23px 0px;}
-.name{position: absolute; top: 160px;left: 200px;}
+.profile {
+  position: absolute;
+  max-width: 33%;
+  max-height: 60%;
+  top: 30%;
+  padding: 30px 30px; 
+  background-color: white; 
+  box-shadow: 2px 2px 23px 0px;
+  border-radius: 10px;
+}
+.name{position: absolute; top: 13%;left: 30%;}
 .projects{
-  position: relative;  
-  max-width: 260px;  
-  max-height: 406px;
+  position: absolute;  
+  max-width: 20%;  
+  min-width: 20%;  
+  max-height: 68%;
   overflow-y: auto;
-  top: -410px;  
-  left: 460px;
+  top: 30%;  
+  left: 44%;
   padding: 1px 15px;
   background-color: white; 
   box-shadow: 2px 2px 23px 0px;
+  border-radius: 10px;
 }
 .active-projects{
   position: absolute;  
-  max-width: 210px; 
-  min-width: 210px; 
-  max-height: 355px;
+  max-width: 16%; 
+  min-width: 16%; 
+  max-height: 52%;
   overflow-y: auto;
   overflow-x: auto;
-  top: 106px;  
-  left: 634px;
+  top: 30%;  
+  left: 47%;
   padding: 0px 30px;
   background-color: white; 
   box-shadow: 2px 2px 23px 0px;
-  margin-top: 60px;
+  border-radius: 3%;
 }
 .project-heading{position: absolute; top: -10px;}
